# TNI-Mods

./: .gitignore  .gitmodules  .luarc.json  CONFIG-SYSTEM.md  CONTRIBUTING.md  ModManager-README.md  ModManager.bat  ModManager.ps1  ModManagerGUI.ps1  README.md  WEBSITE-SETUP.md  build-gnu.sh  build-zig.cmd  copy-mods.cmd  copy-mods.sh  mod-metadata-schema.yaml
.github/: ACTIONS-README.md  ARCHITECTURE.md  CHANGES-SUMMARY.md  MOD-RELEASE-SYSTEM.md  QUICK-REFERENCE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  general.yml
.github/PULL_REQUEST_TEMPLATE/: new_mod.md  patch.md
.github/scripts/: update_mod_version.py
.github/workflows/: build-gnu-continuous.yml  build-gnu-pr.yml  build-zig-continuous.yml  build-zig-pr.yml  continuous-gnu-release-notes.md  continuous-zig-release-notes.md  deploy-website.yml  generate-mod-pages.yml  mod-release-reusable.yml  release-2x-bandwidth-switches.yml  release-all-proposals.yml  release-chaos-engine.yml  (+11 more)
docs/: .gitignore  README.md  generate_mod_pages.py  hugo.toml
ext/: CMakeLists.txt
lua-typing/: README.md  create_node.lua  globals.lua
mods/: README.md
programs/: CMakeLists.txt
programs/cpp-template/: CMakeLists.txt  README.md  entry.cpp
programs/luajit/: CMakeLists.txt  gdarray.cpp
programs/luajit-support/: CMakeLists.txt  entry.cpp  gdarray.cpp  gdarray.hpp  gdcallable.cpp  gdcallable.hpp  gdobject.cpp  gdobject.hpp  luajit.h  luamodpackage.cpp  luamodpackage.hpp  readme.md  utils.cpp  utils.hpp
programs/tni-mod-template/: entry.cpp
(+2431 files in other folders)
